--- a/application.properties
+++ b/application.properties
@@ -10,6 +10,8 @@ server:
 ---
 spring:
   profiles: sentence
+  application:
+    name: lab-4-sentence
 server:
   port: 8020  
 words: NotApplicable
@@ -17,24 +19,34 @@ words: NotApplicable
 ---
 spring:
   profiles: subject
+  application:
+    name: lab-4-subject
 words: I,You,He,She,It
   
 ---
 spring:
   profiles: verb
+  application:
+    name: lab-4-verb
 words: ran,knew,had,saw,bought
 
 ---
 spring:
   profiles: article
+  application:
+    name: lab-4-article
 words: a,the
 
 ---
 spring:
   profiles: adjective
+  application:
+    name: lab-4-adjective
 words: reasonable,leaky,suspicious,ordinary,unlikely
 
 ---
 spring:
   profiles: noun
+  application:
+    name: lab-4-noun
 words: boat,book,vote,seat,backpack,partition,groundhog
