--- a/lab-4-noun.properties
+++ b/lab-4-noun.properties
@@ -1,3 +1,3 @@
 server.port=${PORT:${SERVER_PORT:0}}
-defaultZone: http://localhost:8011/eureka/,http://localhost:8012/eureka/,http://localhost:8013/eureka/
+eureka.client.serviceUrl.defaultZone: http://localhost:8011/eureka/,http://localhost:8012/eureka/,http://localhost:8013/eureka/
 words: boat,book,vote,seat,backpack,partition,groundhog
