--- a/lab-4-sentence.properties
+++ b/lab-4-sentence.properties
@@ -1,2 +1,2 @@
 server.port=8020
-defaultZone: http://localhost:8011/eureka/,http://localhost:8012/eureka/,http://localhost:8013/eureka/
+eureka.client.serviceUrl.defaultZone: http://localhost:8011/eureka/,http://localhost:8012/eureka/,http://localhost:8013/eureka/
